Font blur fix, firefox th alignment fix, green check icon

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 body {
   font-family: Lato !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .on-top {
