--- a/src/pages/tools/queryrules/QueryRules.css
+++ b/src/pages/tools/queryrules/QueryRules.css
@@ -9,7 +9,7 @@
 
 .qbrb-icon-check {
   font-size: 1.4em;
-  color: #0082c3;
+  color: #28a745;
 }
 
 .qbrb-icon-black {
